[workspace]
members = ["yrgourd", "yrgourd-cli"]
resolver = "2"

[workspace.lints.rust]
rust_2018_idioms = "warn"
trivial_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
cognitive_complexity = "warn"
missing_const_for_fn = "warn"
doc_markdown = "warn"
# missing_errors_doc = "warn"
semicolon_if_nothing_returned = "warn"
