[package]
name = "benchmarks"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
divan = "0.1.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
tokio = { version = "1.34.0", features = ["full"] }
yrgourd = { path = "../yrgourd" }

[[bench]]
name = "benches"
path = "benches/benchmarks.rs"
harness = false

[lints]
workspace = true
