[package]
name = "benchmarks"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
criterion = { version = "0.5.1", features = ["async", "async_tokio"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
tokio = { version = "1.38.0", features = ["full"] }
yrgourd = { path = "../yrgourd" }

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false

[lints]
workspace = true
