[package]
name = "yrgourd-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["deprecated", "derive"] }
futures = "0.3.31"
humantime = "2.1.0"
rand = "0.8.5"
tokio = { version = "1.44.1", features = ["full", "tracing"] }
tokio-util = { version = "0.7.13" }
yrgourd = { path = "../yrgourd" }

[lints]
workspace = true
