[package]
name = "yrgourd-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["deprecated", "derive"] }
futures = "0.3.31"
humantime = "2.2.0"
rand = "0.8.5"
tokio = { version = "1.44.2", features = ["full", "tracing"] }
tokio-util = { version = "0.7.14" }
yrgourd = { path = "../yrgourd" }

[lints]
workspace = true
