[package]
name = "yrgourd"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.6.0"
fips203 = { version = "0.2.1", default-features = false, features = ["ml-kem-768"] }
futures = "0.3.30"
hex = "0.4.3"
lockstitch = "0.25.2"
pin-project-lite = "0.2.14"
rand_core = "0.6.4"
thiserror = "1.0.60"
tokio = { version = "1.37.0", default-features = false, features = ["bytes", "io-util"] }
tokio-util = { version = "0.7.11", default-features = false, features = ["codec"] }
x25519-dalek = { version = "2.0.1", features = ["reusable_secrets", "static_secrets"] }

[dev-dependencies]
bolero = "0.10.0"
rand_chacha = "0.3.1"
tokio = { version = "1.37.0", default-features = false, features = ["full"] }

[lints]
workspace = true
