[package]
name = "yrgourd"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.10.0"
fips203 = { version = "0.4.2", default-features = false, features = ["ml-kem-768"] }
futures = "0.3.31"
hex = "0.4.3"
lockstitch = "0.29.0"
pin-project-lite = "0.2.16"
rand_core = "0.9.0"
subtle = "2.6.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", default-features = false, features = ["bytes", "io-util"] }
tokio-util = { version = "0.7.13", default-features = false, features = ["codec"] }

[dev-dependencies]
bolero = "0.12.0"
rand_chacha = "0.3.1"
tokio = { version = "1.43.0", default-features = false, features = ["full"] }

[lints]
workspace = true
