[package]
name = "yrgourd"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.10.1"
fips203 = { version = "0.4.3", default-features = false, features = ["ml-kem-768"] }
futures = "0.3.31"
hex = "0.4.3"
lockstitch = "0.29.0"
pin-project-lite = "0.2.16"
rand_core = "0.6.4"
subtle = "2.6.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", default-features = false, features = ["bytes", "io-util"] }
tokio-util = { version = "0.7.15", default-features = false, features = ["codec"] }

[dev-dependencies]
bolero = "0.13.4"
rand_chacha = "0.3.1"
tokio = { version = "1.46.1", default-features = false, features = ["full"] }

[lints]
workspace = true
